--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -254,33 +254,28 @@ jobs:
   configure-infrastructure:
     docker:
       # Docker image here that supports Ansible
-      # - image: python:3.11.5-alpine3.18
-      - image: circleci/node:13.8.0
+      - image: cimg/python:3.10
+      # - image: circleci/node:13.8.0
     steps:
-      - aws-cli/setup
       # Checkout code from git
-      - checkout
+      - checkout    
+      - install_ansible
+      - install_awscli
       # Add ssh keys with fingerprint
       - add_ssh_keys:
           fingerprints: ["9b:01:f0:ad:d7:c6:41:10:20:9c:79:24:de:89:25:13"] 
       # attach workspace
       - attach_workspace:
           at: ~/      
+      
       - run:
-          name: Install dependencies
+          name: Run Configure Server Ansible play
           command: |
-            # Your code here
-            sudo apt -yq install python3 ansible   
-      - setup-backend-environment-variables
-      - run:
-          name: Configure server
-          working_directory: .circleci/ansible 
-          command: |
-            # Your code here
+            cd .circleci/ansible 
+            cat inventory.txt
             ansible-playbook -i inventory.txt configure-server.yml
       # Here's where you will add some code to rollback on failure
       - destroy-environment
-      - revert-migrations 
 
   run-migrations:
     docker:
@@ -552,7 +547,7 @@ workflows:
           filters:
             branches:
               # only: [circleci-project-setup]
-              only: [development]
+              only: [master]
       - configure-infrastructure:
           requires: [deploy-infrastructure]
       - run-migrations:
