--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,24 @@ orbs:
 
 
 commands:
+  install_awscli:
+    description: Install AWS CLI v2
+    steps:
+      - run:
+          name: Install AWS CLI v2
+          command: |
+            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+            unzip awscliv2.zip
+            sudo ./aws/install
+
+  install_ansible:
+    description: Install Ansible
+    steps:
+      - run:
+          name: Install Ansible
+          command: |
+            python3 -m pip install --user ansible
+  
   destroy-environment:
     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
     parameters:
@@ -22,9 +40,11 @@ commands:
             export TERM=ansi #Fixed: WARNING: terminal is not fully functional
             # Delete objects in S3 bucket
             aws s3 rm "s3://udapeople-<<parameters.ID>>" --recursive
+            
             # Delete frontend stack
             aws cloudformation delete-stack --stack-name \
               "stack-frontend-<<parameters.ID>>"  
+
             # Delete backend stack
             aws cloudformation delete-stack --stack-name \
               "stack-backend-<<parameters.ID>>" 
@@ -59,6 +79,7 @@ commands:
             else
               echo "No migrations to revert!"  
             fi
+  
 
   setup-backend-environment-variables:
     description: Setup environment variables in "backend/.env" file
@@ -231,17 +252,13 @@ jobs:
                --tags "project=udapeople"
       - run:
           name: Add back-end ip to ansible inventory
-          working_directory: .circleci/ansible 
           command: |
-            # Your code here
-            echo "[web]" > inventory.txt
-            aws ec2 describe-instances \
+            BACKEND_PUBLIC_IP=$(aws ec2 describe-instances \
+              --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
-              --filters "Name=tag:workflow_id,Values=${CIRCLE_WORKFLOW_ID:0:7}" \
-              --output text >> inventory.txt
-            echo "---inventory.txt---"
-            cat inventory.txt
-            echo "---inventory.txt---"
+              --output text)
+            echo $BACKEND_PUBLIC_IP >> .circleci/ansible/inventory.txt
+            cat .circleci/ansible/inventory.txt
 
       - persist_to_workspace:
           root: ~/
@@ -257,25 +274,30 @@ jobs:
       - image: cimg/python:3.10
       # - image: circleci/node:13.8.0
     steps:
+      - aws-cli/setup
       # Checkout code from git
-      - checkout    
-      - install_ansible
-      - install_awscli
+      - checkout
       # Add ssh keys with fingerprint
       - add_ssh_keys:
           fingerprints: ["9b:01:f0:ad:d7:c6:41:10:20:9c:79:24:de:89:25:13"] 
       # attach workspace
       - attach_workspace:
           at: ~/      
-      
       - run:
-          name: Run Configure Server Ansible play
+          name: Install dependencies
           command: |
-            cd .circleci/ansible 
-            cat inventory.txt
+            # Your code here
+            sudo apt -yq install python3 ansible   
+      - setup-backend-environment-variables
+      - run:
+          name: Configure server
+          working_directory: .circleci/ansible 
+          command: |
+            # Your code here
             ansible-playbook -i inventory.txt configure-server.yml
       # Here's where you will add some code to rollback on failure
       - destroy-environment
+      - revert-migrations 
 
   run-migrations:
     docker:
@@ -547,7 +569,7 @@ workflows:
           filters:
             branches:
               # only: [circleci-project-setup]
-              only: [master]
+              only: [development]
       - configure-infrastructure:
           requires: [deploy-infrastructure]
       - run-migrations:
