--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ commands:
             export TERM=ansi #Fixed: WARNING: terminal is not fully functional
             # Delete objects in S3 bucket
             aws s3 rm "s3://udapeople-<<parameters.ID>>" --recursive
-            
+
             # Delete frontend stack
             aws cloudformation delete-stack --stack-name \
               "stack-frontend-<<parameters.ID>>"  
@@ -274,30 +274,27 @@ jobs:
       - image: cimg/python:3.10
       # - image: circleci/node:13.8.0
     steps:
-      - aws-cli/setup
+     
       # Checkout code from git
       - checkout
+      - install_ansible
+      - install_awscli
       # Add ssh keys with fingerprint
       - add_ssh_keys:
           fingerprints: ["9b:01:f0:ad:d7:c6:41:10:20:9c:79:24:de:89:25:13"] 
       # attach workspace
       - attach_workspace:
           at: ~/      
-      - run:
-          name: Install dependencies
-          command: |
-            # Your code here
-            sudo apt -yq install python3 ansible   
-      - setup-backend-environment-variables
+      
       - run:
           name: Configure server
-          working_directory: .circleci/ansible 
           command: |
-            # Your code here
+            cd .circleci/ansible
+            cat inventory.txt
+
             ansible-playbook -i inventory.txt configure-server.yml
       # Here's where you will add some code to rollback on failure
       - destroy-environment
-      - revert-migrations 
 
   run-migrations:
     docker:
