--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -232,7 +232,7 @@ jobs:
           command: |
             echo "Deploying backend..."
             aws cloudformation deploy \
-              --template-file .circleci/files/backend.yml \
+              --template-file backend.yml \
               --stack-name "stack-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
               --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}" \
               --tags "project=udapeople" "workflow_id=${CIRCLE_WORKFLOW_ID:0:7}"
@@ -242,7 +242,7 @@ jobs:
           command: |
             echo "Deploying frontend..."
              aws cloudformation deploy \
-               --template-file .circleci/files/frontend.yml \
+               --template-file frontend.yml \
                --stack-name "stack-frontend-${CIRCLE_WORKFLOW_ID:0:7}" \
                --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}" \
                --tags "project=udapeople"
