--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,7 +56,7 @@ commands:
       ID:
         description: The ID used to create bucket and stacks
         type: string
-        default: ${CIRCLE_WORKFLOW_ID}  
+        default: ${CIRCLE_WORKFLOW_ID:0:7}  
     steps:
       - run:
           name: Revert migrations
@@ -64,20 +64,14 @@ commands:
           when: on_fail
           command: |
             # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
-            SUCCESS=$(curl -H "token: 271ce878-7b96-47f1-ae12-e706830ca519" \
-              --request GET https://api.memstash.io/values/migration_${CIRCLE_WORKFLOW_ID})
-            echo "---SUCCESS---"
-            echo "${SUCCESS}"
-            echo "---SUCCESS---"
-            if(( ${SUCCESS}==1 )); 
+            SUCCESS=$(curl --insecure  https://kvdb.io/TVK4hrWfDKf1pxuUErm4bB/migration_<< parameters.Workflow_ID >>)
+
+            # Logic for reverting the database state
+            if (( $SUCCESS == 1 ));
             then
               cd ~/project/backend
               npm install
-              #  Add revert code here. You can find this in the Getting Started section.
-              echo "Reverting migrations..."
-              npm run-script migrations:revert
-            else
-              echo "No migrations to revert!"  
+              npm run migration:revert
             fi
   
 
@@ -295,34 +289,31 @@ jobs:
   run-migrations:
     docker:
       # Docker image here that supports NodeJS
-      - image: circleci/node:13.8.0
+      - image: cimg/python:3.10
     steps:
-      - aws-cli/setup
       # Checkout code from git
       - checkout
+      - install_awscli
+      - install_nodejs
       - restore_cache:
-          keys: [backend-build--v1]  
+          keys: [backend-deps]  
       - run:
           name: Run migrations
-          working_directory: backend 
           command: |
-            # Your code here
+            cd backend
             npm install
-            npm run migrations > migrations.log
-            cat migrations.log
+            npm run migrations > migrations_dump.txt
+            cat migrations_dump.txt
       - run:
-          name: Send migration results to memstash
-          working_directory: backend 
+          name: Send migration results to kvdb.io
           command: |
             # Your code here
-            RESULT=$(! grep -q "has been executed successfully" migrations.log; echo $?)
-            echo "RESULT=$RESULT"
-            curl -H "Content-Type: text/plain" -H "token: 271ce878-7b96-47f1-ae12-e706830ca519" \
-              --request PUT \
-              --data "$RESULT" https://api.memstash.io/values/migration_${CIRCLE_WORKFLOW_ID}
-            echo "---CIRCLE_WORKFLOW_ID---"  
-            echo "${CIRCLE_WORKFLOW_ID}"
-            echo "---CIRCLE_WORKFLOW_ID---"  
+            if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
+            then
+              curl https://kvdb.io/TVK4hrWfDKf1pxuUErm4bB/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+            else
+              echo "No migrations are pending" 
+            fi
      # Here's where you will add some code to rollback on failure
       - destroy-environment
       - revert-migrations  
