--- a/backend/package.json
+++ b/backend/package.json
@@ -44,7 +44,7 @@
     "@types/jsonwebtoken": "^7.2.8",
     "@types/winston": "^2.4.4",
     "class-transformer": "^0.2.3",
-    "class-validator": "0.12.2",
+    "class-validator": "^0.9.1",
     "cli-color": "^1.3.0",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
@@ -63,7 +63,6 @@
     "swagger-ui-express": "^4.1.4",
     "typeorm": "^0.2.24",
     "uuid": "^3.4.0",
-    "winston": "^3.10.0",
     "winston-loggly-bulk": "^2.0.3",
     "winston-slack-webhook": "^0.1.6"
   },
@@ -78,7 +77,7 @@
     "nodemon": "^1.19.4",
     "prettier": "^1.19.1",
     "rimraf": "^2.6.2",
-    "standard-version": "^7.0.0",
+    "standard-version": "^4.4.0",
     "supertest": "^3.4.2",
     "ts-jest": "^24.3.0",
     "ts-loader": "^4.4.2",
