--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -308,8 +308,8 @@ jobs:
     steps:
       # Checkout code from git
       - checkout
-      # - install_awscli
-      # - install_nodejs
+      - install_awscli
+      - install_nodejs
       - restore_cache:
           keys: [backend-build]  
       - run:
@@ -325,7 +325,7 @@ jobs:
             # Your code here
             if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
             then
-              curl https://kvdb.io/TVK4hrWfDKf1pxuUErm4bB/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+              curl https://kvdb.io/${KVDB_BUCKET}/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
             else
               echo "No migrations is are pending" 
             fi
