--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -372,45 +372,46 @@ jobs:
 
   deploy-backend:
     docker:
-      # Docker image here that supports Ansible
-      - image: circleci/node:13.8.0
+      - image: cimg/python:3.10
     steps:
-      - aws-cli/setup
-      # Checkout code from git
       - checkout
-      # Add ssh keys with fingerprint
+      - install_ansible
+      - install_awscli
+      - install_nodejs
+
+      - restore_cache:
+          keys: [backend-build]
       - add_ssh_keys:
-          fingerprints: ["9b:01:f0:ad:d7:c6:41:10:20:9c:79:24:de:89:25:13"]       
-      # attach workspace
+          fingerprints: ["9b:01:f0:ad:d7:c6:41:10:20:9c:79:24:de:89:25:13"] 
       - attach_workspace:
-          at: ~/         
+          at: ~/
       - run:
           name: Install dependencies
           command: |
-            # your code here
-            sudo apt -yq install python3 ansible
-      - restore_cache:
-          keys: [backend-build]
-      - setup-backend-environment-variables      
-      - run:
-          name: Get a fresh backend build
-          working_directory: backend
-          command: |
-            # Your code here
+            cd backend
             npm install
-            npm run-script build                 
+
+      - run:
+          name: Package Backend
+          command: |
+            cd backend
+            npm run build
+            tar -czf artifact.tar.gz dist/* package*
+
+            cd ..
+            cp backend/artifact.tar.gz .circleci/ansible/roles/deploy/file
       - run:
           name: Deploy backend
           command: |
-            # your code here
-            tar -C backend -czf \
-              .circleci/ansible/roles/deploy/files/backend-artifact.tar.gz .
-            export ANSIBLE_HOST_KEY_CHECKING=False  
-            ansible-playbook -i .circleci/ansible/inventory.txt \
-              .circleci/ansible/deploy-backend.yml  
-      # Here's where you will add some code to rollback on failure
-      - destroy-environment
-      - revert-migrations
+            export TYPEORM_MIGRATIONS_DIR=./migrations
+            export TYPEORM_ENTITIES=./modules/domain/**/*.entity{.ts,.js}
+            export TYPEORM_MIGRATIONS=./migrations/*.ts
+
+            cd .circleci/ansible
+            cat inventory.txt
+            ansible-playbook -i inventory.txt deploy-backend.yml
+      - destroy-environment 
+      - revert-migrations  
 
   smoke-test:
     docker:
@@ -568,8 +569,8 @@ workflows:
           requires: [configure-infrastructure]
       - deploy-frontend:
           requires: [run-migrations]
-      # - deploy-backend:
-      #     requires: [run-migrations]
+      - deploy-backend:
+          requires: [run-migrations]
       # - smoke-test:
       #     requires: [deploy-backend, deploy-frontend]
       # - cloudfront-update:
