--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -375,10 +375,7 @@ jobs:
       - image: circleci/node:13.8.0
     steps:
       - checkout
-      - install_awscli
-      - install_ansible
-           
-
+      
       - restore_cache:
           keys: [backend-build]
       - add_ssh_keys:
@@ -388,30 +385,24 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            cd backend
-            npm install
+            apk add --update tar gzip aws-cli ansible nodejs npm curl
 
-      - run:
-          name: Package Backend
-          command: |
-            cd backend
-            npm run build
-            tar -czf artifact.tar.gz dist/* package*
-
-            cd ..
-            cp backend/artifact.tar.gz .circleci/ansible/roles/deploy/file
       - run:
           name: Deploy backend
           command: |
-            export TYPEORM_MIGRATIONS_DIR=./migrations
-            export TYPEORM_ENTITIES=./modules/domain/**/*.entity{.ts,.js}
-            export TYPEORM_MIGRATIONS=./migrations/*.ts
-
+            cd backend
+            npm i
+            npm run build
+            cd ..
+            ## Zip the directory
+            pwd
+            tar -C backend -czvf artifact.tar.gz .
+            mkdir -p ~/project/.circleci/ansible/roles/deploy/files/
+            mv artifact.tar.gz .circleci/ansible/roles/deploy/files/artifact.tar.gz
             cd .circleci/ansible
+            echo "Contents  of the inventory.txt file is -------"
             cat inventory.txt
-            ansible-playbook -i inventory.txt deploy-backend.yml
-      - destroy-environment 
-      - revert-migrations  
+            ansible-playbook -i inventory.txt deploy-backend.yml -vvv  
 
   smoke-test:
     docker:
