--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -372,12 +372,10 @@ jobs:
 
   deploy-backend:
     docker:
-      - image: circleci/node:13.8.0-alpine
+      - image: circleci/node:14
     steps:
-      - checkout
+      - checkout     
       
-      - restore_cache:
-          keys: [backend-build]
       - add_ssh_keys:
           fingerprints: ["9b:01:f0:ad:d7:c6:41:10:20:9c:79:24:de:89:25:13"] 
       - attach_workspace:
