--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -372,28 +372,31 @@ jobs:
 
   deploy-backend:
     docker:
-      - image: circleci/node:14
+      - image: python:3.7-alpine3.17
     steps:
-      - checkout     
+      - checkout  
+         
       
       - add_ssh_keys:
           fingerprints: ["9b:01:f0:ad:d7:c6:41:10:20:9c:79:24:de:89:25:13"] 
-      - attach_workspace:
-          at: ~/
+      
       - run:
           name: Install dependencies
           command: |
-            apk add --update tar gzip aws-cli ansible nodejs npm curl
+            apk add --update --no-cache tar gzip ansible npm aws-cli curl
+      - restore_cache:
+          keys: [backend-build]
+      - attach_workspace:
+          at: ~/
 
       - run:
           name: Deploy backend
           command: |
             cd backend
-            npm i
+            npm install
             npm run build
             cd ..
             ## Zip the directory
-            pwd
             tar -C backend -czvf artifact.tar.gz .
             mkdir -p ~/project/.circleci/ansible/roles/deploy/files/
             mv artifact.tar.gz .circleci/ansible/roles/deploy/files/artifact.tar.gz
@@ -401,6 +404,9 @@ jobs:
             echo "Contents  of the inventory.txt file is -------"
             cat inventory.txt
             ansible-playbook -i inventory.txt deploy-backend.yml -vvv  
+      
+      - destroy-environment
+      - revert-migrations
 
   smoke-test:
     docker:
