--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -9,16 +9,12 @@
   apt:
     upgrade: yes
 
-- name: "install nodejs"
-  become: true
-  apt:
-    name: nodejs=13.8.0
-    update_cache: yes
+
 
 - name: "install dependencies."
   become: true
   apt:
-    name: ["tar"]
+    name: ['nodejs', 'npm']
     state: latest
     update_cache: yes
   
@@ -36,7 +32,6 @@
   file:
     path: /home/ubuntu/backend
     state: directory
-    mode: 0755
 
 - name: "Copy artifact to backend directory"
   copy:
