--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,15 +16,12 @@ commands:
             sudo ./aws/install
 
   install_ansible:
-    description: Install Ansible
-    steps:
-      - run:
-          name: Install Ansible
-          command: |
-            sudo apt update
-            sudo apt install software-properties-common -y
-            sudo add-apt-repository --yes --update ppa:ansible/ansible
-            sudo apt install ansible -y
+  description: Install Ansible
+  steps:
+    - run:
+        name: Install Ansible
+        command: |
+          python3 -m pip install --user ansible
 
   
   install_nodejs:
@@ -372,38 +369,57 @@ jobs:
 
   deploy-backend:
     docker:
-      - image: python:3.7-alpine3.17
+      - image: cimg/base:stable
     steps:
       - checkout  
-         
+      - install_awscli
+      - install_ansible
+      - install_nodejs         
       
       - add_ssh_keys:
           fingerprints: ["9b:01:f0:ad:d7:c6:41:10:20:9c:79:24:de:89:25:13"] 
-      
+                  
+      - attach_workspace:
+          at: ~/
       - run:
           name: Install dependencies
           command: |
-            apk add --update --no-cache tar gzip ansible npm aws-cli curl
-      - restore_cache:
-          keys: [backend-build]
-      - attach_workspace:
-          at: ~/
-
-      - run:
-          name: Deploy backend
-          command: |
             cd backend
-            npm install
+            npm i
             npm run build
             cd ..
-            ## Zip the directory
+            ## zip directory
+            pwd
             tar -C backend -czvf artifact.tar.gz .
             mkdir -p ~/project/.circleci/ansible/roles/deploy/files/
             mv artifact.tar.gz .circleci/ansible/roles/deploy/files/artifact.tar.gz
             cd .circleci/ansible
             echo "Contents  of the inventory.txt file is -------"
             cat inventory.txt
-            ansible-playbook -i inventory.txt deploy-backend.yml -vvv  
+            ansible-playbook -i inventory.txt deploy-backend.yml -vvv
+
+      # - run:
+      #     name: Install dependencies
+      #     command: |
+      #       cd backend
+      #       npm i
+      # - run:
+      #     name: Backend Package
+      #     command: |
+      #       cd backend
+      #       npm run build
+      #       tar -czf artifact.tar.gz dist/* package*
+      #       cd ..
+      #       cp backend/artifact.tar.gz .circleci/ansible/roles/deploy/files
+      # - run:
+      #     name: Deploy backend
+      #     command: |
+      #       export TYPEORM_MIGRATIONS_DIR=./migrations
+      #       export TYPEORM_ENTITIES=./modules/domain/**/*.entity{.ts,.js}
+      #       export TYPEORM_MIGRATIONS=./migrations/*.ts
+      #       cd .circleci/ansible
+      #       cat inventory.txt
+      #       ansible-playbook -i inventory.txt deploy-backend.yml  
       
       - destroy-environment
       - revert-migrations
