--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ commands:
 
   
   install_nodejs:
-    description: Install Node.js 13.8.0
+    description: Install Node.js 
     steps:
       - run:
           name: Install Node.js 13.8.0
