--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ commands:
 
   
   install_nodejs:
-    description: Install Node.js 
+    description: Install Node.js 13.8.0
     steps:
       - run:
           name: Install Node.js 13.8.0
@@ -36,7 +36,7 @@ commands:
 
             # Use n version manager to use Node.js v13.8.0
             sudo npm install --global n
-            sudo n 13.8.0
+            sudo n 14.18.1
   
   destroy-environment:
     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
