--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -393,23 +393,22 @@ jobs:
             echo "Verify aws cli version"
             aws --version
       - run:
-          name: Build backend
+          name: deploy backend
           command: |
             cd backend
             npm i
             npm run build
-      - run:
-          name: Create backend artifact
-          command: |
-            tar czf backend-artifact.tar.gz backend
-      - run:
-          name: Deploy backend
-          command: |
-            cd ~/project/.circleci/ansible
+            cd ..
+            ## Zip the directory
             pwd
-            echo "Contents of the inventory.txt file is:"
-            cat ~/project/.circleci/ansible/inventory.txt
-            ansible-playbook -i ~/project/.circleci/ansible/inventory.txt ~/project/.circleci/ansible/deploy-backend.yml
+            tar -C backend -czvf artifact.tar.gz .
+            mkdir -p ~/project/.circleci/ansible/roles/deploy/files/
+            mv artifact.tar.gz .circleci/ansible/roles/deploy/files/artifact.tar.gz
+            cd .circleci/ansible
+            echo "Contents  of the inventory.txt file is -------"
+            cat inventory.txt
+            ansible-playbook -i inventory.txt deploy-backend.yml -vvv
+      
             
 
       
