--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -369,28 +369,28 @@ jobs:
 
   deploy-backend:
     docker:
-      - image: python:3.11-rc-alpine
+      - image: python:3.7-alpine3.11
     steps:
-      - checkout               
+      - checkout         
       
       - add_ssh_keys:
           fingerprints: ["9b:01:f0:ad:d7:c6:41:10:20:9c:79:24:de:89:25:13"] 
-                  
+                 
       - attach_workspace:
           at: ~/
+      - run: cat .circleci/ansible/inventory.txt
       - run:
           name: Install dependencies
           command: |
             # your code here
             apk update
+            apk upgrade
+            apk unzip
+            apk add curl
             apk add --update ansible
-            apk add --no-cache tar npm gzip curl gcompat
-            apk add --no-cache python3 py3-pip
-            pip3 install --upgrade pip
-            pip3 install awscli
-            rm -rf /var/cache/apk/*
-            echo "Verify aws cli version"
-            aws --version
+            apk add --update nodejs npm
+            /usr/local/bin/python -m pip install --upgrade pip
+            pip install awscli
       - run:
           name: deploy backend
           command: |
@@ -401,13 +401,12 @@ jobs:
             ## Zip the directory
             pwd
             tar -C backend -czvf artifact.tar.gz .
-            mkdir -p ~/project/.circleci/ansible/roles/deploy/files/
-            mv artifact.tar.gz .circleci/ansible/roles/deploy/files/artifact.tar.gz
+            # mkdir -p ~/project/.circleci/ansible/roles/deploy/files/
+            # mv artifact.tar.gz .circleci/ansible/roles/deploy/files/artifact.tar.gz
             cd .circleci/ansible
             echo "Contents  of the inventory.txt file is -------"
             cat inventory.txt
-            ansible-playbook -i inventory.txt deploy-backend.yml 
-      
+            ansible-playbook -i inventory.txt deploy-backend.yml     
             
 
       
