--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -32,12 +32,10 @@
         production: yes
         state: present
 
-    - name: "install python for Ansible."
+    - name: 'install python for Ansible.'
       become: true
-      apt:
-        name: python3
-        state: latest
-        update_cache: yes
+      raw: test -e /usr/bin/python3 || (apt -y update && apt install -y python3)
+      changed_when: false
 
   environment:
     - TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION')}}"  
