--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -339,11 +339,11 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            # install tar utility
-            yum install -y tar gzip
-            # install nodejs on aws linux instance 
-            curl -sL https://rpm.nodesource.com/setup_lts.x | bash -
-            yum -y install nodejs
+            apk add tar 
+            apk add nodejs
+            apk add npm
+            apk add curl
+            pip install awscli --upgrade
       - run:
           name: Get backend url
           command: |
