--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -14,6 +14,7 @@
 - name: "Install dependencies"
   shell: |
     cd /home/ubuntu/backend   
+    chmod -R u+w /home/ubuntu/backend
     ls -la 
     npm install
 
