--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -15,7 +15,7 @@
   shell: |
     cd /home/ubuntu/backend   
     ls -la 
-    npm install
+    sudo npm install
 
 - name: "build package"
   become: true
